Contact Form Set Up

--- a/contacto.html
+++ b/contacto.html
@@ -88,7 +88,7 @@
         <div class="row justify-content-center d-flex align-items-center mb-5">
             <div class="col-12 col-md-8 col-lg-6">
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3767.4061769290465!2d-99.5938642!3d19.221122!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd8b80828be213%3A0x63d05b7d838e535a!2sHersa!5e0!3m2!1sen!2smx!4v1529386966570" class="embed-responsive-item" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3767.4061769290465!2d-99.5938642!3d19.221122!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd8b80828be213%3A0x63d05b7d838e535a!2sHersa!5e0!3m2!1sen!2smx!4v1529386966570" class="embed-responsive-item wow fadeIn" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-12 col-md-4" id="contact-info">
@@ -114,7 +114,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h1 class="text-center mb-3 wow fadeInUp">Cotizaciones</h1>
-                        <form action="https://formspree.io/richardbrees1@gmail.com" method="POST">
+                        <form action="https://formspree.io/ventas@carroceriashersa.mx" method="POST">
                             <div class="form-group">
                                 <p class="text-muted text-right wow fadeInUp"><small>* Todos los campos son requeridos.</small></p>
                             </div>
@@ -150,21 +150,21 @@
                                     <div class="form-group wow fadeIn">
                                         <label for="largo">Largo *</label>
                                         <input type="text" class="form-control form-control-sm" id="largo" name="Largo" aria-describedby="largoHelp" required>
-                                        <p id="largoHelp" class="form-text text-muted text-right">cm</p>
+                                        <p id="largoHelp" class="form-text text-muted text-right">metros</p>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-4">
                                     <div class="form-group wow fadeIn">
                                         <label for="alto">Alto *</label>
                                         <input type="text" class="form-control form-control-sm" id="alto" name="Alto" aria-describedby="altoHelp" required>
-                                        <p id="altoHelp" class="form-text text-muted text-right">cm</p>
+                                        <p id="altoHelp" class="form-text text-muted text-right">metros</p>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-4">
                                     <div class="form-group wow fadeIn">
                                         <label for="ancho">Ancho *</label>
                                         <input type="text" class="form-control form-control-sm" id="ancho" name="Ancho" aria-describedby="anchoHelp" required>
-                                        <p id="anchoHelp" class="form-text text-muted text-right">cm</p>
+                                        <p id="anchoHelp" class="form-text text-muted text-right">metros</p>
                                     </div>
                                 </div>
                             </div>
