--- a/cajas-secas.html
+++ b/cajas-secas.html
@@ -232,7 +232,7 @@
                 <p class="ml-3">© 2018 Copyright:<a href="https://carroceriashersa.mx"> Carrocerías HERSA</a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-3 order-lg-2">
-                <p class="text-center">Desarrollado por <a href="https://iconica.mx" target="_blank" rel="author"><strong>Iconica Studio</strong></a></p>
+                <p class="text-center"><i class="fas fa-desktop"></i>&nbsp; ¿Necesitas tu página web? &nbsp;<a href="https://iconica.mx" target="_blank" rel="author"><strong>¡Contáctanos!</strong></a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-2 order-lg-3 text-right">
                 <p class="mr-3"><a href="aviso-privacidad.html" class="mr-3">Aviso de Privacidad</a>
