--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
     <link href="css/hersa.css" rel="stylesheet">
 </head>
 <body>
+<!-- MICRODATA
+================================================== -->
+<div itemscope itemtype="http://schema.org/Organization">
+ 	<meta itemprop="description" content="Venta e instalación de cajas y carrocerías en Toluca para camioneta y camión. Cajas secas e inyectadas, de lujo, madera y laminada en general. Trabajos especiales, alargamientos de chasis y aplicación de pintura.">
+    <link itemprop="url" href="www.carroceriashersa.mx" rel="author"/>
+    <span itemprop="name"><strong>Carrocerías HERSA Toluca</strong></span>
+    <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+		<span itemprop="streetAddress">Carretera Toluca-Tenango km. 8.5 </span>
+        <span itemprop="addressLocality">Toluca</span>,
+        <span itemprop="addressRegion">Estado de México</span>
+		<span itemprop="postalCode">52143</span>
+		<span itemprop="addressCountry">México</span>
+	</div>
+</div>
+
+
 <!-- NAVBAR
 ================================================== -->
 <nav class="navbar navbar-expand-lg navbar-dark z-depth-5 fixed-top">
@@ -224,33 +240,49 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-md-10 col-lg-8">
+            <div class="col-12 col-md-10 col-lg-9">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                     </ol>
                     <div class="carousel-inner wow fadeIn">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/home/process-1.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>1. Primer paso</h5>
-                                <!-- <p>...</p> -->
+                                <p class="mb-2">Perfil carrocero para elaboración de carrocería en lámina negra al carbón.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/home/process-2.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>2. Segundo paso</h5>
-                                <!-- <p>...</p> -->
+                                <p class="mb-2">Se comienza la elaboración de carrocería/caja seca. Cortando material de acuerdo a las medidas de nuestros clientes.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/home/process-3.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>3. Tercer paso</h5>
-                                <!-- <p>...</p> -->
+                                <p class="mb-2">Nuestras carrocerías son elaboradas con materiales tratados en primer anti-corrosivo blanco para evitar oxidación, forrada con madera de pino, tratada con premiere según el color que requiera el cliente.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/home/process-4.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>4. Cuarto paso</h5>
+                                <p class="mb-2">Producto terminado con pintura en color blanco esmalte. Lista para trasladarse al punto de exibición y ser instalada.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/home/process-5.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>5. Quinto paso</h5>
+                                <p class="mb-2">Producto ya finalmente terminado con reflejantes, micas y calcomanías marca “HERSA” instalada en unidad chasis.</p>
                             </div>
                         </div>
                     </div>
@@ -361,7 +393,7 @@
                 <p class="ml-3">© 2018 Copyright:<a href="https://carroceriashersa.mx"> Carrocerías HERSA</a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-3 order-lg-2">
-                <p class="text-center">Desarrollado por <a href="https://iconica.mx" target="_blank" rel="author"><strong>Iconica Studio</strong></a></p>
+                <p class="text-center"><i class="fas fa-desktop"></i>&nbsp; ¿Necesitas tu página web? &nbsp;<a href="https://iconica.mx" target="_blank" rel="author"><strong>¡Contáctanos!</strong></a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-2 order-lg-3 text-right">
                 <p class="mr-3"><a href="aviso-privacidad.html" class="mr-3">Aviso de Privacidad</a>
