--- a/contacto.html
+++ b/contacto.html
@@ -98,7 +98,7 @@
                         San Miguel Toto, Metepec, Méx.</a></p>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope fa-2x"></i></span>
-                        <p class="ml-3 wow fadeInUp"><a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a></p>
+                        <p class="ml-3 wow fadeInUp"><a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a></p>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone fa-2x"></i></span>
                         <p class="ml-3 wow fadeInUp"><a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
@@ -288,7 +288,7 @@
                 <p class="ml-3">© 2018 Copyright:<a href="https://carroceriashersa.mx"> Carrocerías HERSA</a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-3 order-lg-2">
-                <p class="text-center">Desarrollado por <a href="https://iconica.mx" target="_blank" rel="author"><strong>Iconica Studio</strong></a></p>
+                <p class="text-center"><i class="fas fa-desktop"></i>&nbsp; ¿Necesitas tu página web? &nbsp;<a href="https://iconica.mx" target="_blank" rel="author"><strong>¡Contáctanos!</strong></a></p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 order-2 order-lg-3 text-right">
                 <p class="mr-3"><a href="aviso-privacidad.html" class="mr-3">Aviso de Privacidad</a>
