--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Cache-control" content="no-cache" />
+    <meta http-equiv="Cache-control" content="cache, max-age:604800">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="copyright" content="Copyright © 2018 Carrocerías Hersa">
@@ -28,6 +28,54 @@
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png" />
 
+    <!-- GOOGLE ANALYTICS
+    ================================================== -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121412960-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-121412960-1');
+    </script>
+
+    <!-- SEO INFO
+    ================================================== -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '256718081523336');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=256718081523336&ev=PageView&noscript=1"
+    /></noscript>
+
+    <!-- SEO INFO
+    ================================================== -->
+    <meta name="description" content="Galería - Carrocerías HERSA Toluca">
+    <meta name="keywords" content="caja seca, cajas para camiones, carroceria, carroceria de camion, carroceria para camiones, carrocerias termincas, carrocerias y remolques, remolques, venta de carrocerias, venta de carrocerias para camiones">
+    <meta name="author" content="Iconica Studio">
+    <meta name="designer" content="Richard Maya">
+
+    <!-- OPEN GRAPH
+    ================================================== -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Carrocerías HERSA">
+    <meta property="og:url" content="https://carroceriashersa.mx/galeria.html">
+    <meta property="og:image" content="https://carroceriashersa.mx/img/home/slider-1.jpg">
+    <meta property="og:image" content="https://carroceriashersa.mx/img/home/slider-2.jpg">
+    <meta property="og:image" content="https://carroceriashersa.mx/img/home/slider-3.jpg">
+    <meta property="og:image" content="https://carroceriashersa.mx/img/home/slider-4.jpg">
+    <meta property="og:image" content="https://carroceriashersa.mx/img/home/slider-5.jpg">
+
+    <!-- STYLESHEETS
+    ================================================== -->
     <link href="css/hersa.css" rel="stylesheet">
 </head>
 <body>
